--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ body{
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 70px;
-    color: darkseagreen;
+    color:cornflowerblue;
+    text-decoration: underline 5px;
+    font-weight: bold;
+    font-style: oblique;
 }
 h2{
     font-family: cursive;
